k8s/services/airtrail/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airtrail
  labels:
    app: airtrail
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airtrail
  template:
    metadata:
      labels:
        app: airtrail
    spec:
      restartPolicy: Always
      nodeSelector:
        platform.io/type: main
      containers:
        - name: airtrail
          image: johly/airtrail:latest
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: airtrail
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: airtrail
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: airtrail

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`airtrail.rvserver.online`)
      kind: Rule
      services:
        - name: airtrail
          port: 80
